1998-08-15  Mikael Djurfeldt  <mdj@barbara.nada.kth.se>

	* boot-9.scm: Make the root module use (ice-9 regex) if
	available.  The dynamic linking facilities in boot-9.scm are
	currently dependent upon regular expressions.  My change of
	1998-07-14 removed (ice-9 regex) from the use-list of the root
	module and thereby destroyed dynamic linking.

1998-07-29  Jim Blandy  <jimb@zwingli.cygnus.com>

	* Makefile.in: Regenerated using the last public version of
	automake, not the hacked Cygnus version.

1998-07-28  Jim Blandy  <jimb@zwingli.cygnus.com>

	* Makefile.in: Regenerated, after removing Totoro kludge.

1998-07-28  Jim Blandy  <jimb@totoro.red-bean.com>

	* getopt-gnu-style.scm: New file.  (Thanks to Russ McManus.)

1998-07-26  Jim Blandy  <jimb@zwingli.cygnus.com>

	* Makefile.in Rebuilt, for config changes in parent dir.

1998-07-21  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* readline.scm (make-readline-port): Set prompt string to "... "
	after first read line.  (Thanks to Richard Polton.)

1998-07-19  Jim Blandy  <jimb@zwingli.cygnus.com>

	* lineio.scm (make-line-buffering-input-port): Don't use
	ungetc-char-ready?, since we don't provide that function any
	more.  The unread-string function doesn't interact properly with
	any of the standard I/O functions anyway.  (Thanks to Andrew
	Archibald.)

	* hcons.scm (hashq-cons-assoc): Don't assume the empty list is
	false.  Return false when we cannot find a matching entry in the
	list.  (Thanks to Andrew Archibald.)

1998-07-16  Mikael Djurfeldt  <mdj@barbara.nada.kth.se>

	* boot-9.scm (export, export-syntax): New special forms: Export
	bindings from a module.  `(export name1 name2 ...)' can be used at
	the top of a module (after `define-module') to specify which names
	should be exported.  It can be used as an alternative to
	`define-public'.  `export-syntax' works equivalently to `export'
	but is intended for export of syntactic keywords.
	(Thanks to Thien-Thi Nguyen.)
